--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "6.11.1"
   },
   "scripts": {
-    "postinstall": "node-sass --update hacksoft/static/sass/main.scss:hacksoft/static/css/main.css"
+    "postinstall": "node-sass --output-style compressed -o hacksoft/static/css hacksoft/static/scss"
   },
   "dependencies": {
     "node-sass": "^4.5.3"
